--- a/animationLogo.html
+++ b/animationLogo.html
@@ -12,6 +12,13 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>home</li>
+        <li>home</li>
+        <li>home</li>
+      </ul>
+    </nav>
     <div><i class="fa-brands fa-twitter twitter"></i></div>
   </body>
 </html>
